third commit, bug fix the block portfolio

--- a/index.html
+++ b/index.html
@@ -202,25 +202,31 @@
     <section class="portfolio" id="portfolio">
         <div class="portfolio__container">
             <div class="portfolio__content">
-                <a class="portfolio__content-image" href="https://amzhukov.github.io/grand_hotel/">
-                    <img src="assets/image/portfolio1.jpg">
-                </a>
+                <div class="portfolio__content-item">
+                    <a class="portfolio__content-image" href="https://amzhukov.github.io/grand_hotel/">
+                        <img src="assets/image/portfolio1.jpg">
+                    </a>
+                </div>
                 <div class="portfolio__content-description">
                     I attended Dolinger Web School courses on HTML, CSS and little bit JS. The result is a <a href="https://amzhukov.github.io/grand_hotel/">hotel website</a>
                 </div>
             </div>
             <div class="portfolio__content">
-                <a class="portfolio__content-image" href="https://amzhukov.github.io/FirstProjectLearning/">
-                    <img src="assets/image/portfolio2.jpg">
-                </a>
+                <div class="portfolio__content-item">
+                    <a class="portfolio__content-image" href="https://amzhukov.github.io/FirstProjectLearning/">
+                        <img src="assets/image/portfolio2.jpg">
+                    </a>
+                </div>
                 <div class="portfolio__content-description">
                     During the GloAcademy courses, I completed an OOP project - a <a href="https://amzhukov.github.io/FirstProjectLearning/">calculator</a>
                 </div>
             </div>
             <div class="portfolio__content">
+                <div class="portfolio__content-item">
                 <a class="portfolio__content-image" href="https://amzhukov.github.io/graduation-project/">
-                    <img src="assets/image/portfolio3.jpg">
-                </a>
+                        <img src="assets/image/portfolio3.jpg">
+                    </a>
+                </div>
                 <div class="portfolio__content-description">
                     At the moment, I am completing my <a href="https://amzhukov.github.io/graduation-project/">graduation work</a> in GloAcademy courses, using JavaScript technologies ES6, AJAX, WebPack, Git, NPM. The project will be completed soon
                 </div>
