--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
         </div>
     </header>
     <section class="hero">
-        <div class="hero-container">
-            <div class="hero-video-full">
+        <div class="hero__container">
+            <div class="hero__video-full">
                 <video src="./assets/video/hero.webm" autoplay loop preload muted playsinline></video>
             </div>
-            <div class="hero-title">
-                <h1 class="hero-message">Hello my dear friend!<br>
+            <div class="hero__title">
+                <h1 class="hero__message">Hello my dear friend!<br>
                     Welcome to my website!<br>
                     Will be familiar, my name is Andrey Zhukov
                 </h1>
@@ -163,36 +163,37 @@
         </div>
     </section>
     <section class="about" id="about">
-        <div class="about-container">
-            <div class="about-left">
-                <div class="about-me">
+        <div class="about__container">
+            <div class="about__left">
+                <div class="about__me">
                     about me
                 </div>
-                <div class="about-me-briefly">
+                <div class="about__me-briefly">
                     I am a beginner front-end developer.
                 </div>
-                <div class="about-me-long">
+                <div class="about__me-long">
                     I began to get involved in web development a year ago. <br>
                 </div>
             </div>
-            <div class="about-right">
-                <img class="about-right-photo" src="./assets/image/myPhoto.jpeg">
+            <div class="about__right">
+                <img class="about__right-photo" src="./assets/image/myPhoto.jpeg">
             </div>
+        </div>
     </section>
     <section class="education" id="education">
-        <div class="education-container">
+        <div class="education__container">
             <div class="education__left">
                 <img class="education__left-photo" src="./assets/image/susu.jpg">
             </div>
             <div class="education__right">
-                <div class="education-title"> Education
+                <div class="education__title"> Education
                 </div>
-                <div class="education-place-of-study">
-                    <div class="education-university">
+                <div class="education__place-of-study">
+                    <div class="education__university">
                         South Ural State University<br>
                         2017-2019<br> Master
                     </div>
-                    <div class="education-specialty">
+                    <div class="education__specialty">
                         Higher School of Electronics and Computer Science,<br> Computer Science and Computer Engineering
                     </div>
                 </div>
@@ -328,16 +329,15 @@
                     <h4>Back call</h4>
                     <input type="hidden" name="form_name" value=" Обратный звонок">
                     <!--  <input type="hidden" name="club" value="<?=$_GET['club-name']?>"> -->
-                    <p class="input-text"><input name="name" type="text" id="callback_form1-name" required placeholder="Your name..."></p>
-                    <p class="input-text"><input type="tel" name="phone" id="callback_form1-phone" required
+                    <p class="input-text"><input name="name" type="text" id="callback_form1-name"  placeholder="Your name..."></p>
+                    <p class="input-text"><input type="tel" name="phone" id="callback_form1-phone"
                                                  placeholder="Your phone number..."></p>
                     <p class="personal-data">
-                        <input type="checkbox" required id="check" class="error"><label for="check" >I AGREE FOR PROCESSING
+                        <input type="checkbox"  id="check" class="error"><label for="check" >I AGREE FOR PROCESSING
                          <br>PERSONAL DATA</label>
 
                     </p>
-                    <button name="send1" class="popup__form-content-btn btn-send" type="submit" >С
-                        all me back</button>
+                    <button name="send1" class="popup__form-content-btn btn-send" type="submit" >Сall me back</button>
                 </form>
 
             </div>
